# chicago-crime-classifier

./: .env.env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.conf  pyproject.toml  run_api.py
aws/: ChicagoCrimesPolicy.json  iam_permission_revised.json
aws/infrastructure/: 00-check-permissions.sh  00-config.sh  01-create-s3-buckets.sh  02-deploy-static-website.sh  03-create-cloudfront.sh  04-create-api-gateway.sh  05-create-dynamodb.sh  06-create-ecr-repository.sh  06-deploy-ml-lambda-docker.sh  07-build-push-docker.sh  08-create-lambda-role.sh  09-cleanup-all.sh  09-setup-ses-email.sh  10-cloud-watch-logs.sh  10-deploy-lambda-function.sh  11-configure-s3-trigger.sh  12-configure-api-integration.sh  13-update-and-invalidate.sh  14-full-deployment.sh  15-cloud-watch-logs.sh  16-cleanup-all.sh
aws/lambda/: .dockerignore  Dockerfile  config.py  ml-predictor.py
aws/static-web/: index.html  script.js  style.css
data/: README.md  header_only.csv  iam_user_policy.json  malformed_csv.csv  missing_columns.csv  test_2025_first_100_rows.csv
deploy/: 00-config.sh  01-create-s3-buckets.sh  02-deploy-static-website.sh  03-create-cloudfront.sh  04-create-api-gateway.sh  04-step1-s3-and-cloudfront.sh  05-cleanup-step1.sh  05-create-dynamodb.sh  07-full-deployment.sh  08-update-and-invalidate.sh
lambda/: Dockerfile  ml-predictor.py
models/: xgb_model.pkl
notes/: 00_business_problem_and_requirements.md  00_pre-commit-implementation.md  01_predictive_policing_data_pipeline_notes.md  02_exploratory_data_analysis.md  02_exploratory_data_analysis_notes.md  04_modular_architecture_and_production_deployment.md  04_modular_architecture_and_production_deployment_notes.md  05_testing_framework_and_quality_assurance_notes.md  06_web_service_deployment_of_model.md  07_web_interface_and_api_integration_notes.md  08_containerization_and_docker_deployment_notes.md  09_aws_elastic_beanstalk_deployment.md  09_aws_elastic_beanstalk_deployment_notes.md  10_aws_elastic_beanstalk_cleanup.md  10_serverless_s3_cloudfront_architecture_setup.md  11_s3_bucket_creation_and_static_deployment_scripts.md  12_cloudfront_distribution_and_origin_access_control.md  13_deployment_execution_and_cleanup_operations.md  14_aws_well_architected_framework_and_shared_responsibility_analysis.md  15_architectural_shortfalls_and_improvement_recommendations.md  exploratory_data_analysis_notes.md  machine_learning_model_training_notes.md  modular_architecture_and_production_deployment_notes.md  predictive_policing_data_pipeline_notes.md  testing_framework_and_quality_assurance_notes.md
notes/01_project_foundation/: 01_business_problem_and_requirements.md
notes/02_data_pipeline/: 02_exploratory_data_analysis.md
scripts/: explore_data.ipynb  extract_data.py  extract_sample_data.py
src/: predict-api.py
static-web/: index.html  script.js  style.css
tests/: conftest.py  test_config.py  test_data_loader.py  test_feature_engineer.py  test_integration.py  test_model_evaluator.py  test_model_trainer.py
(+37 files in other folders)
