[project]
name = "chicago-crimes"
version = "0.1.0"
description = "chicago-crimes-classifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "fastapi>=0.119.0",
    "jinja2>=3.1.6",
    "mangum>=0.19.0",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.37.0",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "awsebcli>=3.25.1",
    "bandit>=1.8.6",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "ipykernel>=7.0.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "pre-commit>=3.8.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.1.1",
    "sodapy>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/chicago_crimes"]

[project.scripts]
train-model = "chicago_crimes.training.train_model:main"
